--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -53,7 +53,14 @@ jobs:
         curl -fsSL https://raw.githubusercontent.com/P3TERX/dotfiles/master/.bashrc >> ~/.bashrc
 
     - name: Clone source code
-      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt1
+      run: wget http://downloads.openwrt.org/snapshots/targets/ramips/mt7621/openwrt-sdk-ramips-mt7621_gcc-8.3.0_musl.Linux-x86_64.tar.xz
+      run: xz -d openwrt-sdk-ramips-mt7621_gcc-8.3.0_musl.Linux-x86_64.tar.xz
+      run: tar -xvf openwrt-sdk-ramips-mt7621_gcc-8.3.0_musl.Linux-x86_64.tar
+      run: mv openwrt-sdk-ramips-mt7621_gcc-8.3.0_musl.Linux-x86_64 openwrt
+      run: cd openwrt
+      run: cp -R ../lede/package/lean/ package/ ../openwrt/package/lean
+      run: cp -R ../lede/package/libs/librpc ../openwrt/package/libs
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
@@ -101,8 +108,6 @@ jobs:
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
-        cd openwrt/bin/targets/*/*
-        rm -rf packages
         echo "::set-env name=FIRMWARE::$PWD"
         echo "::set-output name=status::success"
 
